Bug 513858: Inverse themes (light text on dark backgrounds) breaks theme (chrome patch), r=stuart
UltraBlame original commit: ec7932376c40268858b21b4e4d0c04e492120e62

--- a/mobile/themes/hildon/platform.css
+++ b/mobile/themes/hildon/platform.css
@@ -78,6 +78,20 @@ end
 5px
 ;
 }
+richlistbox
+textbox
+{
+color
+:
+black
+;
+background
+-
+color
+:
+white
+;
+}
 .
 panel
 -
@@ -1733,21 +1747,15 @@ true
 "
 ]
 {
+color
+:
+black
+;
 background
 -
 color
 :
--
-moz
--
-Field
-;
-color
-:
--
-moz
--
-FieldText
+white
 ;
 }
 richlistitem
