--- a/mobile/themes/wince/platform.css
+++ b/mobile/themes/wince/platform.css
@@ -11,6 +11,20 @@ skin
 /
 )
 ;
+richlistbox
+textbox
+{
+color
+:
+black
+;
+background
+-
+color
+:
+white
+;
+}
 .
 panel
 -
@@ -2937,21 +2951,15 @@ true
 "
 ]
 {
+color
+:
+black
+;
 background
 -
 color
 :
--
-moz
--
-Field
-;
-color
-:
--
-moz
--
-FieldText
+white
 ;
 }
 richlistitem
